@@ -11,6 +11,7 @@ import minicraft.entity.mob.Player;
 import minicraft.entity.particle.SmashParticle;
 import minicraft.entity.particle.TextParticle;
 import minicraft.gfx.Color;
+import minicraft.gfx.Screen;
 import minicraft.gfx.Sprite;
 import minicraft.item.Item;
 import minicraft.item.ToolItem;
@@ -22,6 +23,11 @@ public class CloudCactusTile extends Tile {
 	
 	protected CloudCactusTile(String name) {
 		super(name, sprite);
+	}
+
+	public void render(Screen screen, Level level, int x, int y) {
+		Tiles.get("Cloud").render(screen, level, x, y);
+		sprite.render(screen, x << 4, y << 4);
 	}
 	
 	public boolean mayPass(Level level, int x, int y, Entity e) {
